--- a/home/tmux.conf
+++ b/home/tmux.conf
@@ -1,7 +1,9 @@
 set-option -g prefix C-a
 
-bind | split-window -h
-bind - split-window -v
+bind | split-window -h -c "#{pane_current_path}"
+bind - split-window -v -c "#{pane_current_path}"
+
+bind c new-window -c "#{pane_current_path}"
 
 bind h select-pane -L
 bind j select-pane -D
