--- a/home/tmux.conf
+++ b/home/tmux.conf
@@ -6,6 +6,7 @@ bind % split-window -h -c "#{pane_current_path}"
 bind '"' split-window -v -c "#{pane_current_path}"
 
 bind c new-window -c "#{pane_current_path}"
+bind C new-window
 
 bind h select-pane -L
 bind j select-pane -D
