[tmux] Display message until key event

--- a/home/tmux.conf
+++ b/home/tmux.conf
@@ -50,3 +50,4 @@ set-window-option -g clock-mode-colour green #green
 # reload config
 bind r source-file ~/.tmux.conf \; display-message "Config reloaded..."
 
+set-option -g display-time -1
