Fix tmux.conf for 2.9

--- a/home/tmux.conf
+++ b/home/tmux.conf
@@ -21,25 +21,6 @@ bind -r L resize-pane -R 1
 # https://github.com/seebi/tmux-colors-solarized/blob/master/tmuxcolors-256.conf
 set-option -g status-bg colour235 #base02
 set-option -g status-fg colour136 #yellow
-set-option -g status-attr default
-
-# default window title colors
-set-window-option -g window-status-fg colour244 #base0
-set-window-option -g window-status-bg default
-#set-window-option -g window-status-attr dim
-
-# active window title colors
-set-window-option -g window-status-current-fg colour166 #orange
-set-window-option -g window-status-current-bg default
-#set-window-option -g window-status-current-attr bright
-
-# pane border
-set-option -g pane-border-fg colour235 #base02
-set-option -g pane-active-border-fg colour240 #base01
-
-# message text
-set-option -g message-bg colour235 #base02
-set-option -g message-fg colour166 #orange
 
 # pane number display
 set-option -g display-panes-active-colour colour33 #blue
@@ -50,4 +31,5 @@ set-window-option -g clock-mode-colour green #green
 # reload config
 bind r source-file ~/.tmux.conf \; display-message "Config reloaded..."
 
-set-option -g display-time -1
+set-option -g display-time 0
+set-option -g default-terminal "screen-256color"
